--- a/www/bootstrap.css
+++ b/www/bootstrap.css
@@ -1579,6 +1579,11 @@ pre code {
     width: 1170px;
   }
 }
+@media (min-width: 1400px) {
+  .container {
+    width: 1370px;
+  }
+}
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
